# incubator

./: .gitignore  CLAUDE.md  README.md
_nice/: CLAUDE.md
_nice/tenderwatch/: .env.example  .gitignore  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
_nice/tenderwatch/alembic/: env.py
_nice/tenderwatch/alembic/versions/: 0001_initial.py
_nice/tenderwatch/app/: config.py  db.py  main.py
_nice/tenderwatch/app/auth/: line_login.py  session.py
_nice/tenderwatch/app/billing/: ecpay.py  webhooks.py
_nice/tenderwatch/app/ingest/: embedder.py  opendata.py
_nice/tenderwatch/app/models/: __init__.py  match.py  profile.py  subscription.py  tender.py  user.py
_nice/tenderwatch/app/notify/: email_digest.py  line_push.py  renderer.py
_nice/tenderwatch/app/routes/: auth.py  billing.py  dashboard.py  ecpay_hooks.py  linebot.py  onboarding.py  public.py
_nice/tenderwatch/app/scoring/: filter.py  semantic.py
_nice/tenderwatch/app/templates/: base.html  marketing_base.html
_nice/tenderwatch/app/workers/: scheduler.py  tasks.py
_nice/tenderwatch/docs/: PHASE1_PLAN.md
_nice/tenderwatch/examples/: sample_line_alert.txt  sample_output.md
_nice/tenderwatch/samples/: sample_tenders.json  sample_user_profile.json
_nice/tenderwatch/tests/: conftest.py
_nice/tenderwatch/tests/integration/: test_alembic.py  test_app_smoke.py  test_auth_routes.py  test_billing_routes.py  test_dashboard_routes.py  test_db_schema.py  test_ecpay_webhook.py  test_ingest_task.py  test_linebot_webhook.py  test_marketing_routes.py  test_onboarding_routes.py
cabbrain/: rl.py  (+3 more)
(+701 files in other folders)
