[project]
name = "tenderwatch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]==0.115.*",
  "uvicorn[standard]==0.32.*",
  "sqlmodel==0.0.22",
  "psycopg[binary]==3.2.*",
  "alembic==1.13.*",
  "pydantic-settings==2.6.*",
  "httpx==0.27.*",
  "anthropic==0.40.*",
  "openai==1.55.*",
  "redis==5.2.*",
  "apscheduler==3.10.*",
  "jinja2==3.1.*",
  "python-multipart==0.0.*",
  "itsdangerous==2.2.*",
  "sentry-sdk[fastapi]==2.18.*",
  "resend==2.4.*",
  "line-bot-sdk==3.14.*",
  "numpy==2.1.*",
  "structlog==24.4.*",
]

[dependency-groups]
dev = [
  "pytest==8.3.*",
  "pytest-asyncio==0.24.*",
  "pytest-cov==6.0.*",
  "ruff==0.7.*",
  "respx==0.21.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
